# DoclingRAGExam1

./: .env  .gitignore  app.py  main.py  pyproject.toml
data_loader/: load_file.py  web_data_loader.py
db/: __init__.py  retrievers.py  vectordb.py
model/: __init__.py  llm_models.py  query.py
tools/: async_tools.py  extract_table.py  load_file.py
